#149 Fix clipped touch-header menu. Align dropdown menu to the right.

--- a/src/scss/components/_touch-header.scss
+++ b/src/scss/components/_touch-header.scss
@@ -3,7 +3,6 @@
 // --------------------------------------------------
 
 .touch-header {
-	overflow: hidden;
 	position: relative;
 
 	@include touch-or-bp-down(sm) {
